Change file reading from getFile to InputStream to make the jar file work properly