@@ -8,6 +8,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.stereotype.Component;
 
 import java.io.File;
+import java.io.InputStream;
 import java.nio.file.Files;
 
 @Slf4j
@@ -26,16 +27,18 @@ public class ImagePublisher {
 	}
 
 
-	void publishImage(File image, String description) throws Exception {
+	void publishImage(InputStream image, String description) throws Exception {
 		if (publishImage) {
 
 			GraphResponse imagePublishedResponse =
 					fbClient.publish(_PAGEID + "/photos", GraphResponse.class,
-							BinaryAttachment.with(image.getName(), Files.readAllBytes((image.toPath()))),
+							BinaryAttachment.with("lawnmowerImage",image.readAllBytes() ),
 							Parameter.with("message", description));
-			System.out.println("Image published.\n" +
+			log.info("===================================");
+			log.info("Image published.\n" +
 					"ID: " + imagePublishedResponse.getId());
 		} else {
+			log.info("===================================");
 			log.info("Image not published");
 		}
 	}
